# metarecoverz

./: Makefile  readme.md  readme1.md  readme3.md  readme4.md  report.csv
artifacts/: acquire.json  btrfs_scan.csv  metadata.json  xfs_scan.csv
core/: CMakeLists.txt
core/src/: btrfs_scan.cpp  reconstruct_csv.cpp  recover_csv.cpp  xfs_scan.cpp
scripts/: build.sh  detect_usb.sh  menu.sh  meta.sh  metarecoverx.sh  run_demo.sh  setup.sh
